Pull up revisions 1.20,1.27 (via patch, requested by msaitoh):   Add missing SH4_PCMCIA cases.  Fixes PR#11441.   Fix KERNELMODE macro (check MD bits too).